# miraipp-library

./: CMakeLists.txt  README.md
mirai/: mirai.h
mirai/core/: common.cpp  common.h  events.cpp  events.h  session.cpp  session.h  types.cpp  types.h
mirai/core/message/: common.cpp  common.h  message.cpp  message.h  received_message.cpp  received_message.h  segment.cpp  segment.h  segment_fwd.h
mirai/core/websockets/: client.cpp  client.h  connection.cpp  connection.h
mirai/utils/: adaptor.h  array_proxy.h  encoding.cpp  encoding.h  json_extensions.h  optional_param.h  request.cpp  request.h  string.h  thread.cpp  thread.h  variant_wrapper.h  vector_ext.h
